fixes cta alignment

--- a/src/listing-cards/style.scss
+++ b/src/listing-cards/style.scss
@@ -372,7 +372,6 @@
 
 		.card-phone {
 			flex: 1 1 auto;
-			justify-items: flex-end;
 
 			.phone-badge {
 				@include flex-center;
